--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
             <name>The ApacheSoftware License, Version 2.0</name>
             <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
             <distribution>repo</distribution>
-            <comments>jarkata encrypt</comments>
+            <comments>Jarkata encrypt</comments>
         </license>
     </licenses>
 
