--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,13 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>2.0.19</version>
+            <version>2.0.25</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>cn.jarkata</groupId>
+            <artifactId>jarkata-commons</artifactId>
+            <version>2.0.4</version>
         </dependency>
     </dependencies>
     <licenses>
