--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>cn.jarkata</groupId>
     <artifactId>jarkata-encrypt</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <name>jarkata-encrypt</name>
     <description>jarkata encrypt utils</description>
@@ -38,10 +38,21 @@
             <version>2.0.25</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk18on -->
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk18on</artifactId>
+            <version>1.75</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-ext-jdk18on</artifactId>
+            <version>1.75</version>
+        </dependency>
         <dependency>
             <groupId>cn.jarkata</groupId>
             <artifactId>jarkata-commons</artifactId>
-            <version>2.0.4</version>
+            <version>2.0.7</version>
         </dependency>
     </dependencies>
     <licenses>
@@ -49,7 +60,7 @@
             <name>The ApacheSoftware License, Version 2.0</name>
             <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
             <distribution>repo</distribution>
-            <comments>Jarkata encrypt</comments>
+            <comments>Jarkata Encrypt</comments>
         </license>
     </licenses>
 
